--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://felix.github.io/react-beginners"
+  "homepage": "https://DonghyoHong.github.io/react-beginners"
 }
